--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="../../styles/styles.css" />
 
 <link rel="stylesheet" href="../../styles/variables_fuentes_textos_colores.css" />
+<link rel="stylesheet" href="../../styles/modulos/botones.css" />
+
 <section class="section-home">
 	<div class="container_flex_colum_fstart">
 		<div class="margen-grande">
