--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<body class="texto-con-sombra">
 		<header>
 			<nav class="navbar">
-				<div class="navbar__menu_principal medida-titulo-extra-reducido">
+				<div class="navbar__menu_principal ">
 					<ul class="navbar__menu">
 						<li class="navbar__menu-item">
 							<a href="#sobre-mi"><span>S</span>obre Mí</a>
