--- a/index.html
+++ b/index.html
@@ -65,30 +65,30 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
 			rel="stylesheet"
-			
 		/>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="styles/movil.css" />
 		<link rel="stylesheet" href="styles/styles.css" />
 		<link rel="stylesheet" href="styles/general.css" />
-			<link rel="stylesheet" href="secciones/contacto/contacto.css" />
-	
+		<link rel="stylesheet" href="secciones/contacto/contacto.css" />
+	</head>
 	<body>
-	
-			<header>
-				<nav class="navbar">
-					<div class="navbar__menu">
-
+		<header>
+			<nav class="navbar">
+				<div class="navbar__menu">
 					<ul class="navbar__menu">
 						<li class="navbar__menu-item">
 							<a href="#sobre_mi" class="navbar__link">
 								<span class="navbar__link-highlight">S</span>obre mí
 							</a>
 						</li>
-						<li class="navbar__menu-item ">
+						<li class="navbar__menu-item">
 							<a href="#tecnologias" class="navbar__link">
 								<span class="navbar__link-highlight">T</span>ecnologías
 							</a>
@@ -108,31 +108,27 @@
 								<span class="navbar__link">B</span>I_
 							</a>
 						</li>
-						<li class="navbar__menu-item ">
+						<li class="navbar__menu-item">
 							<a href="#contacto" class="navbar__link">
 								<span class="navbar__link-highlight">C</span>ontacto
 							</a>
 						</li>
 					</ul>
 				</div>
-					<div class="navbar__menu-icon">
-					</div>
-	
-					<div class="navbar__logo">
-						<a href="#">
-							<img src="images/logo.png" alt="Carlos Rivera Logo" loading="lazy" />
-						</a>
-					</div>
-				</nav>
-				
-			</header>
+				<div class="navbar__menu-icon"></div>
 
+				<div class="navbar__logo">
+					<a href="#">
+						<img src="images/logo.png" alt="Carlos Rivera Logo" loading="lazy" />
+					</a>
+				</div>
+			</nav>
+		</header>
 
 		<main class="combined-effects-pulse">
 			<iframe
 				src="secciones/inicio/inicio.html"
 				class="borde-redondeado-grande"
-			
 				frameborder="0"
 				scrolling="no"
 				title="inicio"
@@ -143,7 +139,6 @@
 			<iframe
 				src="secciones/sobre_mi/sobre_mi.html"
 				class="borde-redondeado-grande doble_altura"
-				style="width: 100%; height: 130vh"
 				title="sobre_mi"
 				frameborder="0"
 				scrolling="no"
@@ -155,60 +150,56 @@
 			<!-- SKILLS SECTION -->
 
 			<iframe
-			src="secciones/tecnologias/tecnologias.html"
-			id="tecnologias" class="slide-in-left"
-			title="tecnologias"
-			frameborder="0"
-			scrolling="no"
-		
-		></iframe>
-			
+				src="secciones/tecnologias/tecnologias.html"
+				id="tecnologias"
+				class="slide-in-left"
+				title="tecnologias"
+				frameborder="0"
+				scrolling="no"
+			>
+			</iframe>
+
 			<!-- Other Skills -->
 
 			<iframe
-			src="secciones/habilidades/habilidades.html"
-			id="habilidades" class="slide-in-left"
-			title="habilidades"
-			frameborder="0"
-			scrolling="no"
-		
-		></iframe>
-
-			<!-- works -->
-		<div class="doble_altura">
-				<iframe id="proyectos"
-					src="secciones/proyectos/proyectos.html"
-					 class="slide-in-left"
-					title="proyectos"
-					frameborder="0"
-					scrolling="no"
-				
-				></iframe>
-		
-			</div>
-			<iframe id="business-intelligence"
-				src="secciones/bi/bi.html"
-				title="bi"				
+				src="secciones/habilidades/habilidades.html"
+				id="habilidades"
+				class="slide-in-left"
+				title="habilidades"
 				frameborder="0"
 				scrolling="no"
-				class="bi"		
+			></iframe>
+			<!-- works -->
+
+			<iframe
+				id="proyectos"
+				src="secciones/proyectos/proyectos.html"
+				class="slide-in-left"
+				title="proyectos"
+				frameborder="0"
+				scrolling="no"
+			></iframe>
+
+			<iframe
+				id="business-intelligence"
+				src="secciones/bi/bi.html"
+				title="bi"
+				frameborder="0"
+				scrolling="no"
+				class="bi"
 			>
 				<div class="final">
 					<h2 class="heading-secondary"><span>B</span>usiness <span>I</span>ntelligence</h2>
-				</div></iframe
-			>
-
+				</div>
+			</iframe>
 			<iframe
-			src="secciones/contacto/contacto.html"
-			id="contacto" class="slide-in-left"
-			title="contacto"
-			frameborder="0"
-			scrolling="no"
-		
-		></iframe>
-
-	
-
+				src="secciones/contacto/contacto.html"
+				id="contacto"
+				class="slide-in-left"
+				title="contacto"
+				frameborder="0"
+				scrolling="no"
+			></iframe>
 		</main>
 		<script>
 			const miSonido = new Audio("./assets/music/dbz.wav");
@@ -218,8 +209,7 @@
 			});
 		</script>
 		<script src="scripts/scripts.js"></script>
-		<script src="scripts/js/index.js"></script>
-		<!--!debe quitar concat <script src="scripts/js/other_skill.js"></script> -->
+		<script src="scripts/index.js"></script>
 
 		<script>
 			for (let i = 0; i < 100; i++) {
@@ -229,26 +219,6 @@
 				star.style.top = `${Math.random() * 100}%`;
 				document.body.appendChild(star);
 			}
-		</script>
-
-		<script>
-			document.getElementById("copyEmailButton").addEventListener("click", function () {
-				var email = document.getElementById("emailToCopy");
-				email.select();
-				document.execCommand("copy");
-
-				// Opcional: Feedback al usuario
-				this.textContent = "!Email Copiado!";
-			});
-
-			document.addEventListener("DOMContentLoaded", function () {
-				const menuToggle = document.querySelector(".menu-toggle");
-				const navMenu = document.querySelector(".navbar__menu");
-
-				menuToggle.addEventListener("click", function () {
-					navMenu.classList.toggle("active");
-				});
-			});
 		</script>
 	</body>
 </html>
