--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="contacto.css" />
 	</head>
 	<body>
-		<div class="container pulse">
+		<div class="container pulse contact">
 			<div class="contact-content">
 				<!-- Logo en el centro -->
 				<div class="titulo">
