--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -3,22 +3,21 @@
 <link rel="stylesheet" href="../../styles/movil.css" />
 <link rel="stylesheet" href="../../styles/styles.css" />
 
-<link rel="stylesheet" href="../../styles/modulos/botones.css" />
 <link rel="stylesheet" href="inicio.css" />
 
-<div class="container_flex_colum_fstart pulse">
+<div class="container_flex_colum_fstart ">
 	<div></div>
-	<div class="titulo">
+	<div class="titulo pulse">
 		<h1>
 			<span>C</span>arlos<span class="medida-titulo-extra-grande">M</span
 			>ario<span>R</span>ivera.com
 		</h1>
 	</div>
-	<div class="item_contenido_home combined-effects">
+	<div class="combined-effects">
 		<h2><span>A</span>nálisis de Datos Avanzados</h2>
 		<h3><span>D</span>esarrollador de Software</h3>
 	</div>
-	<div class="item_contenido_home">
+	<div class="texto">
 		<a
 			href="../../html/curriculum/curriculum.html"
 			class="link btn btn-outline combined-effects-pulse borde-redondeado-mediando"
@@ -26,11 +25,13 @@
 			>Mi Curriculum !
 		</a>
 	</div>
-	<div class="item_contenido_home textoshadow">
-		<span>A</span>pasionado por la <span>T</span>ecnología
+	<div class="texto">
+		<p><span>A</span>pasionado por la <span>T</span>ecnología y</p>
+		<p><strong><span>P</span>or<span> E</span>ncontrar<span> S</span>oluciones <span>S</span>imples</strong> a</p>
+		<p><strong> <span>P</span>roblemas <span>C</span>omplejos</strong> </p>
 	</div>
 
-	<div class="final">
-		<h2 class="heading-secondary"><span> &lt;⁄&nbsp;S</span>obre Mi</h2>
-	</div>
+
+
+	<div class="final heading-secondary"><span> &lt;&nbsp;I<span>nicio</div>
 </div>
