--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -2,67 +2,36 @@
 <link rel="stylesheet" href="../../styles/general.css" />
 <link rel="stylesheet" href="./habilidades.css" />
 <div class="other-skills contenedor">
-	<div class="heading-secondary--right">
-		<div class="heading-secondary">
-			<span> &lt;&frasl;&nbsp;</span>
-			<span>O</span>tras <span>H</span>abilidades(descubre)
+	<div class="container__medio container__padd">
+		<div class="heading-secondary--right">
+			<div class="heading-secondary">
+				<span> &lt;&frasl;&nbsp;</span>
+				<span>O</span>tras <span>H</span>abilidades(descubre)
+			</div>
 		</div>
+
+		<ul class="other-skills-list container__aumentotamano">
+			<!-- Lista de otras habilidades -->
+
+			<li class="other-skills-item">
+				<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+				<p>
+					<strong>Desarrollo de Software:</strong>
+					.NET(C#,VB), Versionamiento en GitHub, SubVersion.
+				</p>
+			</li>
+			<li class="other-skills-item">
+				<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+				<p><strong>Interoperatividad:</strong> Web Services - SOAP - API Rest. Postman.</p>
+			</li>
+			<li class="other-skills-item">
+				<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+				<p><strong>Metodologías ágiles:</strong> SCRUM, DevOps.</p>
+			</li>
+			<li class="other-skills-item">
+				<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+				<p><strong>Facturación electronica:</strong> UBL, XML, JSON.</p>
+			</li>
+		</ul>
 	</div>
-
-	<ul class="other-skills-list container__aumentotamano">
-		<!-- Lista de otras habilidades -->
-
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p>
-				<strong>Desarrollo de Software:</strong>
-				.NET(C#,VB), Versionamiento en GitHub, SubVersion.
-			</p>
-		</li>
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p>
-				<strong>Logro Destacados::</strong> Participé en el equipo de auditoria interna para
-				certificar a la empresa en la norma ISO 27001.
-			</p>
-		</li>
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p><strong>Interoperatividad:</strong> Web Services - SOAP - API Rest. Postman.</p>
-		</li>
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p>
-				<strong>Logro Destacados: </strong>Optimicé la representación gráfica de documentos
-				electrónicos, disminuyendo su tamaño en 95%
-				<br />
-				para un volumen de millones de documentos, trayendo a la empresa una gran reducción de
-				costos en AWS.
-			</p>
-		</li>
-
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p><strong>Metodologías ágiles:</strong> SCRUM, DevOps.</p>
-		</li>
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p>
-				<strong>Logro Destacados:</strong> Contribuí para que nuestra empresa se consolidara entre
-				los 10 Proveedores tecnológicos con más documentos electrónicos emitidos ante la DIAN.
-			</p>
-		</li>
-
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p><strong>Facturación electronica:</strong> UBL, XML, JSON.</p>
-		</li>
-		<li class="other-skills-item">
-			<ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-			<p>
-				<strong>Logro Destacados:</strong> Mejoré los recursos para emisión de documentos
-				electrónicos ante la DIAN.
-			</p>
-		</li>
-	</ul>
 </div>
