--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -57,9 +57,11 @@
 								<li>Implementación de un dashboard interactivo en QuickSight.</li>
 								<li>Uso de modelos de IA para predicciones precisas.</li>
 							</ul>
+							<a href="#bi" class="link btn btn-outline" target="_blank" rel="noopener"
+								>Ver mucho más</a
+							>
 						</div>
 						<div class="toggle-button" onclick="toggleDescription('description2')">Mostrar más</div>
-						<a href="#bi" class="link btn btn-outline" target="_blank" rel="noopener">Ver más</a>
 					</div>
 				</div>
 			</div>
