--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="contacto.css" />
 	</head>
 	<body>
-		<div class="container pulse contact">
+		<div class="container pulse">
 			<div class="contact-content">
 				<!-- Logo en el centro -->
 				<div class="titulo">
@@ -66,24 +66,5 @@
 				</div>
 			</div>
 		</div>
-		<script>
-			document.getElementById("copyEmailButton").addEventListener("click", function () {
-				var email = "carlosmrz100@hotmail.com";
-				email.select();
-				document.execCommand("copy");
-
-				// Opcional: Feedback al usuario
-				this.textContent = "!Email Copiado!";
-			});
-
-			document.addEventListener("DOMContentLoaded", function () {
-				const menuToggle = document.querySelector(".menu-toggle");
-				const navMenu = document.querySelector(".navbar__menu");
-
-				menuToggle.addEventListener("click", function () {
-					navMenu.classList.toggle("active");
-				});
-			});
-		</script>
 	</body>
 </html>
