--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -43,7 +43,7 @@
 		<!-- Habilidades y Animaciones -->
 		<div class="about_column_skill container__aumentotamano">
 			<!-- Contenedor de habilidades -->
-			<div id="movimiento_skills pulse">
+			<div id="movimiento_skills">
 				<div class="skills-logo"></div>
 				<div class="movimiento_skills-grid">
 					<!-- Cubo central y habilidades -->
