--- a/index.html
+++ b/index.html
@@ -1,245 +1,140 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones</title>
+    <!-- Meta Descriptions -->
+    <meta
+      name="description"
+      content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
+    />
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="Carlos Mario Rivera, desarrollador de software, ingeniero de datos, arquitecto de soluciones, aplicaciones robustas, escalables, infraestructuras en la nube, ISO 27001, tecnologías web, HTML, CSS, JavaScript, React, Angular, AWS, QuickSight, EC2, Athena, S3, Glue"
+    />
+    <!-- Author -->
+    <meta name="author" content="Carlos Mario Rivera" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones" />
+    <meta
+      property="og:description"
+      content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://carlosmariorivera.com" />
+    <meta property="og:image" content="https://carlosmariorivera.com/images/favicon/logo.jpg" />
+    <!-- github Card Meta Tags -->
+    <meta name="github:card" content="summary_large_image" />
+    <meta name="github:title" content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones" />
+    <meta
+      name="github:description"
+      content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
+    />
+    <meta name="github:image" content="https://carlosmariorivera.com/images/favicon/github.svg" />
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://carlosmariorivera.com" />
 
-		<!-- Meta Descriptions -->
-		<meta
-			name="description"
-			content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
-		/>
-		<!-- Keywords -->
-		<meta
-			name="keywords"
-			content="Carlos Mario Rivera, desarrollador de software, ingeniero de datos, arquitecto de soluciones, aplicaciones robustas, escalables, infraestructuras en la nube, ISO 27001, tecnologías web, HTML, CSS, JavaScript, React, Angular, AWS, QuickSight, EC2, Athena, S3, Glue"
-		/>
-		<!-- Author -->
-		<meta name="author" content="Carlos Mario Rivera" />
-		<!-- Open Graph Meta Tags -->
-		<meta
-			property="og:title"
-			content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones"
-		/>
-		<meta
-			property="og:description"
-			content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
-		/>
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://carlosmariorivera.com" />
-		<meta property="og:image" content="https://carlosmariorivera.com/images/favicon/logo.jpg" />
-		<!-- github Card Meta Tags -->
-		<meta name="github:card" content="summary_large_image" />
-		<meta
-			name="github:title"
-			content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones"
-		/>
-		<meta
-			name="github:description"
-			content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
-		/>
-		<meta name="github:image" content="https://carlosmariorivera.com/images/favicon/github.svg" />
-		<!-- Canonical Link -->
-		<link rel="canonical" href="https://carlosmariorivera.com" />
+    <!-- Favicon -->
+    <link rel="icon" href="https://carlosmariorivera.com/images/favicon/favicon.ico" type="image/x-icon" />
 
-		<!-- Favicon -->
-		<link
-			rel="icon"
-			href="https://carlosmariorivera.com/images/favicon/favicon.ico"
-			type="image/x-icon"
-		/>
+    <!-- Favicon -->
 
-		<!-- Favicon -->
-		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon16.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon32.png" />
-		<link rel="icon" type="image/png" sizes="64x64" href="images/favicon/favicon64.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon32.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="images/favicon/favicon64.png" />
 
-		<!-- Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-		<link
-			href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-			rel="stylesheet"
-		/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="styles/movil.css" />
-		<link rel="stylesheet" href="styles/styles.css" />
-		<link rel="stylesheet" href="styles/general.css" />
-		<link rel="stylesheet" href="secciones/contacto/contacto.css" />
-	</head>
-	<body>
-		<header>
-			<nav class="navbar">
-				<div class="navbar__menu">
-					<ul class="navbar__menu">
-						<li class="navbar__menu-item">
-							<a href="#sobre_mi" class="navbar__link">
-								<span class="navbar__link-highlight">S</span>obre mí
-							</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="#tecnologias" class="navbar__link">
-								<span class="navbar__link-highlight">T</span>ecnologías
-							</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="#habilidades" class="navbar__link">
-								<span class="navbar__link-highlight">H</span>abilidades
-							</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="#proyectos" class="navbar__link">
-								<span class="navbar__link">P</span>royectos
-							</a>
-						</li>
-						<li class="navbar__menu-item navbar__menu-item--highlight">
-							<a href="#business-intelligence" class="navbar__link">
-								<span class="navbar__link">B</span>I_
-							</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="#contacto" class="navbar__link">
-								<span class="navbar__link-highlight">C</span>ontacto
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="navbar__menu-icon"></div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
 
-				<div class="navbar__logo">
-					<a href="#">
-						<img src="images/logo.png" alt="Carlos Rivera Logo" loading="lazy" />
-					</a>
-				</div>
-			</nav>
-		</header>
+    <link rel="stylesheet" href="./estilos/estilo.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar pulso">
+        <div class="navbar__logo">
+          <a href="#">
+            <img src="images/logo.png" alt="Logo de Carlos Rivera" loading="lazy" />
+          </a>
+        </div>
 
-		<main class="combined-effects-pulse">
-			<iframe
-				src="secciones/inicio/inicio.html"
-				class="borde-redondeado-grande"
-				frameborder="0"
-				scrolling="no"
-				title="inicio"
-				id="inicio"
-			></iframe>
+        <div class="navbar__menu-icon">
+          <span class="navbar__menu-icon-bar"></span>
+          <span class="navbar__menu-icon-bar"></span>
+          <span class="navbar__menu-icon-bar"></span>
+        </div>
 
-			<!-- Secciones del sitio -->
-			<iframe
-				src="secciones/sobre_mi/sobre_mi.html"
-				class="borde-redondeado-grande doble_altura"
-				style="width: 100%; height: 130vh"
-				title="sobre_mi"
-				frameborder="0"
-				scrolling="no"
-				id="sobre_mi"
-			>
-			</iframe>
+        <ul class="navbar__menu">
+          <li class="navbar__menu-item">
+            <a href="#sobre_mi" class="navbar__link"> <span class="navbar__link-highlight">S</span>obre mí </a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="#tecnologias" class="navbar__link"> <span class="navbar__link-highlight">T</span>ecnologías </a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="#habilidades" class="navbar__link"> <span class="navbar__link-highlight">H</span>abilidades </a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="#proyectos" class="navbar__link"> <span class="navbar__link">P</span>royectos </a>
+          </li>
+          <li class="navbar__menu-item navbar__menu-item--highlight">
+            <a href="#business-intelligence" class="navbar__link"> <span class="navbar__link">B</span>I_ </a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="#contacto" class="navbar__link"> <span class="navbar__link-highlight">C</span>ontacto </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-			<!-- SKILLS SECTION -->
-			<!-- SKILLS SECTION -->
+    <main>
+      <div id="iframe__wrapper">
+        <iframe src="./secciones/inicio/inicio.html" class="" title="inicio" frameborder="0" id="inicio" allowfullscreen> </iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe src="./secciones/sobre_mi/sobre_mi.html" class="" title="sobre_mi" frameborder="0" id="sobre_mi" allowfullscreen> </iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe src="./secciones/tecnologias/tecnologias.html" id="tecnologias" class="slide-in-left" allowfullscreen title="tecnologias" frameborder="0"> </iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe src="secciones/habilidades/habilidades.html" allowfullscreen id="habilidades" title="habilidades" frameborder="0"></iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe id="proyectos " src="secciones/proyectos/proyectos.html" class="slide-in-left" allowfullscreen title="proyectos" frameborder="0"></iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe id="business-intelligence " src="secciones/bi/bi.html" title="bi" frameborder="0" class="bi" allowfullscreen>
+          <div class="final">
+            <h2 class="subtitulo"><span>B</span>usiness <span>I</span>ntelligence</h2>
+          </div>
+        </iframe>
+      </div>
+      <div id="iframe__wrapper">
+        <iframe allowfullscreen src="secciones/contacto/contacto.html" id="contacto" class="slide-in-left" title="contacto" frameborder="0"></iframe>
+      </div>
+    </main>
 
-			<iframe
-				src="secciones/tecnologias/tecnologias.html"
-				id="tecnologias"
-				class="slide-in-left"
-				title="tecnologias"
-				frameborder="0"
-				scrolling="no"
-			>
-			</iframe>
+    <script>
+      const miSonido = new Audio("./assets/music/dbz.wav");
 
-			<!-- Other Skills -->
-
-			<iframe
-				src="secciones/habilidades/habilidades.html"
-				id="habilidades"
-				class="slide-in-left"
-				title="habilidades"
-				frameborder="0"
-				scrolling="no"
-			></iframe>
-			<!-- works -->
-			<div class="doble_altura">
-				<iframe
-					id="proyectos"
-					src="secciones/proyectos/proyectos.html"
-					class="slide-in-left"
-					title="proyectos"
-					frameborder="0"
-					scrolling="no"
-				></iframe>
-			</div>
-			<iframe
-				id="business-intelligence"
-				src="secciones/bi/bi.html"
-				title="bi"
-				frameborder="0"
-				scrolling="no"
-				class="bi"
-			>
-				<div class="final">
-					<h2 class="heading-secondary"><span>B</span>usiness <span>I</span>ntelligence</h2>
-				</div>
-			</iframe>
-			<iframe
-				src="secciones/contacto/contacto.html"
-				id="contacto"
-				class="slide-in-left"
-				title="contacto"
-				frameborder="0"
-				scrolling="no"
-			></iframe>
-		</main>
-		<script>
-			const miSonido = new Audio("./assets/music/dbz.wav");
-
-			document.querySelector(".sonido-hover").addEventListener("mouseover", () => {
-				miSonido.play();
-			});
-		</script>
-		<script src="scripts/scripts.js"></script>
-		<script src="scripts/js/index.js"></script>
-
-		<script>
-			for (let i = 0; i < 100; i++) {
-				const star = document.createElement("div");
-				star.className = "star";
-				star.style.left = `${Math.random() * 100}%`;
-				star.style.top = `${Math.random() * 100}%`;
-				document.body.appendChild(star);
-			}
-		</script>
-
-		<script>
-			document.getElementById("copyEmailButton").addEventListener("click", function () {
-				var email = document.getElementById("emailToCopy");
-				email.select();
-				document.execCommand("copy");
-
-				// Opcional: Feedback al usuario
-				this.textContent = "!Email Copiado!";
-			});
-
-			document.addEventListener("DOMContentLoaded", function () {
-				const menuToggle = document.querySelector(".menu-toggle");
-				const navMenu = document.querySelector(".navbar__menu");
-
-				menuToggle.addEventListener("click", function () {
-					navMenu.classList.toggle("active");
-				});
-			});
-		</script>
-	</body>
+      document.querySelector(".sonido-hover").addEventListener("mouseover", () => {
+        miSonido.play();
+      });
+    </script>
+    <script src="./scripts/index.js"></script>
+  </body>
 </html>
