--- a/html/curriculum/curriculum.html
+++ b/html/curriculum/curriculum.html
@@ -21,7 +21,7 @@ Proximamente, lo voy a desarrollar en react y ordenaré para que tome las imagen
 
 <body>
     <page size="A4">
-        <div class="contenedor">
+        <div class="container">
             <div class="leftPanel">
 
                 <div class="details">
@@ -448,7 +448,7 @@ Proximamente, lo voy a desarrollar en react y ordenaré para que tome las imagen
     <h2>Titulos Profesionales</h2>
     <p>Cambio de imagen automático cada 2 segundos:</p>
 
-    <div class="slideshow-contenedor ">
+    <div class="slideshow-container ">
 
         <div class="mySlides fade ">
             <div class="numbertext ">1 / 5</div>
